<resources>
    <string name="app_name">Timed Silence</string>
    <string name="action_settings">Settings</string>
    <string name="no_next_time_set">Not Set</string>
    <string name="cancel">Cancel</string>
    <string name="volume_setting_unset">Don\'t Change</string>
    <string name="volume_setting_silent">Silent</string>
    <string name="volume_setting_loud">Loud</string>
    <string name="volume_setting_vibrate">Vibrate</string>
    <string name="volume_setting_unset_help">This indicates that no rule covers this timeframe. Therefore, this app will not change your volume.</string>
    <string name="volume_setting_silent_help">Makes the phone silent</string>
    <string name="volume_setting_loud_help">Makes the phone loud</string>
    <string name="volume_setting_vibrate_help">Makes the phone vibrate</string>
    <string name="timecheck_start">start</string>
    <string name="timecheck_stop">stop</string>
    <string name="action_set_manual_loud">Set Loud</string>
    <string name="action_set_manual_vibrate">Set Vibrate</string>
    <string name="action_set_manual_silent">Set Silent</string>
    <string name="timecheck_stopped">Stopped</string>
    <string name="timecheck_running">Running</string>
    <string name="timecheck_paused">Paused</string>
    <string name="GrantDNDPermissionAccess">This app requires access to the \"Do not Disturb\" Permission to mute and unmute the device. Please Grant the permission and press return to get back to this app.</string>
    <string name="GrantDND">Grant!</string>
    <string name="LocationAccessNotification">LocationAccessNotification</string>
    <string name="LocationAccessNotification_TITLE">Location Service required!</string>
    <string name="LocationAccessNotification_CONTENT">Because the wifissid can be used to track you, you need to enable Location Services to use wifinames as profiles!</string>
    <string name="schedule_dialog_title_title">Set the Name</string>
    <string name="schedule_dialog_title_start">Set the Starttime</string>
    <string name="schedule_dialog_title_end">Set the Endtime</string>
    <string name="schedule_dialog_title_volume">Set the Volume</string>
    <string name="schedule_dialog_title_days">Set the Days</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="schedule_dialog_title_textfield_hint">Name</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="schedule_dialog_save">Save</string>
    <string name="friday">Friday</string>
    <string name="volume_while_headset_connected">Don\'t change volume while Headset connected</string>
    <string name="volume_settings">Volume</string>
    <string name="volume_settings_media">Media</string>
    <string name="volume_settings_notifications">Notifications</string>
    <string name="volume_settings_alarm">Alarm</string>
    <string name="volume_settings_ringer">Ringer</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="sun">sun</string>
    <string name="main_tab_time">Time</string>
    <string name="main_tab_wifi_connected">Wifi</string>
    <string name="main_tab_calendar">Calendar</string>
    <string name="main_last_check">Last Check:</string>
    <string name="Request">Request!</string>
    <string name="wifi_add_new">Add a new Wifi setting</string>
    <string name="schedule_add_new">Add a new schedule</string>
    <string name="wifi_permission_hint">You need location access because wifi can be used to identify a location. We are not doing that, see X</string>
    <string name="calendar_add_new">Add new Calendar Setting</string>
    <string name="calendar_dialog_save">Save</string>
    <string name="wifi_dialog_ssid_textfield_hint">Wifiname</string>
    <string name="wifi_type_connected">When Connected</string>
    <string name="wifi_type_searching">When Searching</string>
    <string name="calendar_list_empty">You do not have calendars.</string>
    <string name="calendar_missing_permissions">Calendar-Access not granted.</string>
    <string name="main_tab_graph">Graph</string>
    <string name="export">Export settings</string>
    <string name="import_button">Import settings</string>
    <string name="import_file_success">Success!</string>
    <string name="vibrate">Vibration only!</string>
    <string name="silent">Silent!</string>
    <string name="loud">Loud!</string>
    <string name="PausedNotification">Paused Notification</string>
    <string name="PausedNotification_TITLE">Paused!</string>
    <string name="PausedNotification_CONTENT">The volumecheck is paused.</string>
    <string name="PausedNotification_RESUME">Resume</string>
    <string name="enablePauseNotification">Enable notification when paused</string>
    <string name="open_volume_settings">Open Volume Settings</string>
    <string name="channel_name_calendar_error">Calendar Errors</string>
    <string name="channel_description_calendar_error">Shows errors with detecting calendars</string>
    <string name="main_tab_keyword">Keyword</string>
    <string name="main_tab_checkup">Checkup</string>
    <string name="keyword_add_new">Add new Keyword</string>
    <string name="keyword_dialog_textfield_hint">Enter the keyword here</string>
    <string name="import_deletion_warning">Importing deletes ALL old configurations!</string>
    <string name="GrantCalendarPermissionAccess">Request!</string>
    <string name="GrantCalendarPermissionAccessDescription">This app makes use of the local calendar. To greatly enhance the use of this app, please allow access to your calendars!</string>
    <string name="GrantContactsPermissionAccessDescription">This app makes use of the local contacts. To verify that your calls do not get blocked during emergencies, please grant access to the contacts. This is optional, and we will only use this to show you a warning, if required.</string>
    <string name="GrantBluetoothPermissionAccessDescription">This app makes use of Bluetooth to mute your device if connected to a car, as an example. This is an optional permission. It will show up as a request to find "nearby" devices. This is because bluetooth can be abused to track your location. This app does not track you.</string>
    <string name="GrantBluetoothPermissionAccess">Request!</string>
    <string name="contact_permission_hint">You need the contact access permissions for this feature.</string>
    <string name="ignore_all_day">Ignore All Day Events</string>
    <string name="fragment_title_schedules">Schedules</string>
    <string name="fragment_title_wifi">Wifi Entries</string>
    <string name="fragment_title_keywords">Keyword Entries</string>
    <string name="fragment_title_calendar">Calendar Entries</string>
    <string name="headphones_help">When Headphones are connected, the mediavolume is not changed, even if it is louder as the timeslot suggests. You can disable this behaviour in the Settings.</string>
    <string name="event_no_title">No Title</string>
    <string name="event_no_description">No Description</string>
    <string name="allow_trigger_when_device_idle">Allow Checks when the device is idle</string>
    <string name="PausedNotification_RESUME_AND_CHECK">Resume and Check</string>
    <string name="pref_key_intro_v1_0_0" translatable="false">pref_key_intro_v1_0_0</string>
    <string name="notifications_error_title">Error!</string>
    <string name="notifications_error_description">We could not schedule the next check!</string>
    <string name="intro_slide_welcome_title">Welcome!</string>
    <string name="intro_slide_welcome_description">We will help you stay focused on your tasks, and not get distracted! But first, let us set this app up!</string>
    <string name="intro_slide_calendar_title">Calendar</string>
    <string name="intro_slide_calendar_description">If you want to silence your phone during your meetings and events, we need to access your calendar</string>
    <string name="intro_slide_notification_title">Get Notified!</string>
    <string name="intro_slide_notification_description">We want to show you notifications when this app is being paused, so please grant us access to post notifications. We wont spam you!</string>
    <string name="intro_slide_donotdisturb_title">Do not Disturb</string>
    <string name="intro_slide_donotdisturb_description">To make your Phone truly silent, we need access to the Do not Disturb-Settings.</string>
    <string name="intro_slide_done_title">Done!</string>
    <string name="intro_slide_done_description">You are now ready to start! Enjoy your interruption free time! We have already created a few settings for you.</string>
    <string name="state_checks_are_paused">You paused this app, we currently do not control your volume!</string>
    <string name="calculationg_volume_loading_indicator">Calculating Volume…</string>
    <string name="ignore_tentative_events">Ignore Tentative Events</string>
    <string name="ignore_free_events">Ignore Free Events</string>
    <string name="ignore_cancelled_events">Ignore Cancelled Events</string>
    <string name="general">Appsettings</string>
    <string name="exportSettingsDescription">Export all your settings for this app</string>
    <string name="importSettingsDescription">Import all your settings for this app. Warning! Replaces all current settings!</string>
    <string name="volume_settings_icon_content_description">Behaviour for the volume channels on check time.</string>
    <string name="calendar_settings_icon_content_description">calendar icon</string>
    <string name="calendarSettingsDescription">Decide how should your calendar influence the volume</string>
    <string name="generalSettingsDescription">Overall app behaviour</string>
    <string name="general_settings_icon_content_description">cog/settings icon</string>
    <string name="import_settings_icon_content_description">import icon</string>
    <string name="export_settings_icon_content_description">export icon</string>
    <string name="volume_settings_description">Set channel volume</string>
    <string name="volume_settings_media_description">Media-Volume when Phone gets set to Loud</string>
    <string name="volume_settings_notifications_description">Notification-Volume when Phone gets set to Loud</string>
    <string name="volume_settings_alarm_description">Alarm-Volume when Phone gets set to Loud</string>
    <string name="volume_settings_ringer_description">Ringer-Volume when Phone gets set to Loud</string>
    <string name="volume_settings_default_volume">Default Volume</string>
    <string name="volume_settings_unset_value_description">Select volume that is applied when no calendar or schedule influences device volume</string>
    <string name="export_fileaccess_revoked">Access to files not granted!</string>
    <string name="volume_settings_warning">Warning! This is a very low setting!</string>
    <string name="settings_behaviour">Behaviour</string>
    <string name="volume_change_ringer">Change Ringer Volume instead of using Do not Disturb</string>
    <string name="volume_change_ringer_description">If you allow this app to change the ringer, it will not ring when set to silent. This has the consequence, that *no* noise will be made, to the extend that also exceptions to the \"Do not Disturb\"-Setting will not ring. Use with care, and verify you get the desired effect.</string>
    <string name="ok">OK</string>
    <string name="pause_check_schedule" translatable="false">Pause Timed Silence</string>
    <string name="appwidget_text" translatable="false">donotdelete-placeholder</string>
</resources>