<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/icon_volume_up"
        android:iconSpaceReserved="true"
        android:title="@string/volume_settings">

        <SeekBarPreference
            android:key="@string/pref_volume_media"
            android:title="@string/volume_settings_media"
            app:defaultValue="@integer/pref_volume_default"
            app:showSeekBarValue="true"
            app:summary="@string/volume_settings_media_description" />

        <SeekBarPreference
            android:key="@string/pref_volume_notification"
            android:title="@string/volume_settings_notifications"
            app:defaultValue="@integer/pref_volume_default"
            app:showSeekBarValue="true"
            app:summary="@string/volume_settings_notifications_description"  />

        <Preference
            android:key="ALERT_notification"
            android:title="@string/volume_settings_warning"
            app:icon="@drawable/ic_warning"
            app:isPreferenceVisible="false" />

        <SeekBarPreference
            android:key="@string/pref_volume_alarm"
            android:title="@string/volume_settings_alarm"
            app:defaultValue="@integer/pref_volume_default"
            app:showSeekBarValue="true"
            app:summary="@string/volume_settings_alarm_description"  />

        <Preference
            android:key="ALERT_alarm"
            android:title="@string/volume_settings_warning"
            app:icon="@drawable/ic_warning"
            app:isPreferenceVisible="false" />

        <SeekBarPreference
            android:key="@string/pref_volume_ringer"
            android:title="@string/volume_settings_ringer"
            app:defaultValue="@integer/pref_volume_default"
            app:showSeekBarValue="true"
            app:summary="@string/volume_settings_ringer_description" />

        <Preference
            android:key="ALERT_ringer"
            android:title="@string/volume_settings_warning"
            app:icon="@drawable/ic_warning"
            app:isPreferenceVisible="false" />

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="-1"
            android:entries="@array/pref_unset_volume"
            android:entryValues="@array/pref_unset_volume_values"
            android:key="@string/pref_volume_unset_value"
            android:title="@string/volume_settings_default_volume"
            app:summary="@string/volume_settings_unset_value_description" />
    </PreferenceCategory>

</PreferenceScreen>