<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryContainer"
        android:orientation="vertical">

        <TextView
            android:id="@+id/schedule_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/schedule_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/schedule_title_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/schedule_dialog_title_textfield_hint"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/schedule_dialog_rb_volume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/schedule_dialog_rb_loud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volume_setting_loud" />

                <RadioButton
                    android:id="@+id/schedule_dialog_rb_silent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/volume_setting_silent" />

                <RadioButton
                    android:id="@+id/schedule_dialog_rb_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/volume_setting_vibrate" />
            </RadioGroup>

            <TimePicker
                android:id="@+id/schedule_start_timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="clock"></TimePicker>

            <TimePicker
                android:id="@+id/schedule_end_timepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="clock"></TimePicker>

            <LinearLayout
                android:id="@+id/schedule_days_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <CheckBox
                    android:id="@+id/schedule_dialog_days_monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/schedule_dialog_days_sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/schedule_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:text="@string/cancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/schedule_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/schedule_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/schedule_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:text="@string/schedule_dialog_save"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>