<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <LinearLayout
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/schedule_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/schedule_title_layout">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/schedule_title_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/schedule_dialog_title_textfield_hint"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
                <RadioGroup
                    android:padding="10dp"
                    android:layout_margin="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/schedule_dialog_rb_volume">
                    <RadioButton
                            android:text="@string/volume_setting_loud"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/schedule_dialog_rb_loud"
                            android:layout_weight="1"/>
                    <RadioButton
                            android:text="@string/volume_setting_silent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/schedule_dialog_rb_silent"
                            android:layout_weight="1"/>
                    <RadioButton
                            android:text="@string/volume_setting_vibrate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/schedule_dialog_rb_vibrate"
                            android:layout_weight="1" android:checked="true"/>
                </RadioGroup>
            <TimePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:timePickerMode="clock"
                    android:id="@+id/schedule_start_timepicker">
            </TimePicker>
            <TimePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:timePickerMode="clock"
                    android:id="@+id/schedule_end_timepicker">
            </TimePicker>
            <LinearLayout
                    android:padding="10dp"
                    android:layout_margin="0dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/schedule_days_layout"
                    android:gravity="center">
                <CheckBox
                        android:text="@string/monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_monday"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_tuesday"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_wednesday"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_thursday"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_friday"
                        android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/schedule_dialog_days_saturday"
                        android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/schedule_dialog_days_sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:visibility="visible">
        <Button
                android:text="@string/cancel"
                android:minWidth="0dp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/schedule_cancel"
                android:textColor="@color/colorPrimaryDark"/>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <Button
                android:text="@string/back"
                android:minWidth="0dp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_back"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/next"
                android:minWidth="0dp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_next"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"/>
        <Button
                android:text="@string/schedule_dialog_save"
                android:minWidth="0dp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schedule_save"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark" android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>